--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://Mo7amed7afezamer.github.io/trustflow-data-ai",
+  "homepage": "https://Mo7amed7afezamer.github.io/jawda-med-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
